# Vibechecker

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Log.txt  Makefile  README.md  __main__.py  coverage.xml  coverage_output.txt  getting_started.md  mcp.json  package.json  pyproject.toml  pytest_selected_output.txt  requirements.txt  run_server.py  setup.cfg  smithery.yaml
Docs/: architecture.md
Docs/Phase/: Phase-1.md  Phase-4.md  Phase-5.md
Example-project/: example1.py  example2.py  example3.py
data/: README.md
data/benchmark_data/: benchmark_data_large.json
data/sample_outputs/: critical_agent_output.json
docs/: README.md
docs/Overview/: PRD.md  optimization_report.md  reliability_report.md  test_docs.md
docs/Overview/Phase/: Phase-1.md  Phase-2.md  Phase-3.md
docs/Phase-1-docs/: endpoint_spec.md  protocol_compliance.md  quality_benchmarks.md
docs/Phase-2-docs/: agent_interfaces.md  agent_roles.md  agent_workflows.md  optimization_strategies.md  schema_examples.md
docs/architecture/: orchestration_sequence.md
docs/criteria/: critical_checklist.md  critical_sample_output.json  debt_checklist.md  debt_sample_output.json  improvement_checklist.md  improvement_sample_output.json
docs/development/: agent_workflow_diagrams.md
docs/guides/: architecture_mermaid.md  mcp_integration.md  overview.md  performance_optimization.md  plugin_architecture.md  roadmap.md
docs/images/: README.md
docs/phases/: fastmcp_summary.md  orchestration_flow.md  prompt_templates.md  prototype_server.py  reference_index.md  validation_report.md
docs/reference/: FastMCP.md  django_CONTRIBUTING.md  django_README.md  fastapi_README.md  flask_README.md  gemini.md  kubernetes_CONTRIBUTING.md  kubernetes_README.md  nodejs_README.md  pytorch_API.md  pytorch_CONTRIBUTING.md  pytorch_README.md  react_CONTRIBUTING.md  react_README.md  redis_README.md  tensorflow_CONTRIBUTING.md  vscode_CONTRIBUTING.md  vscode_README.md
docs/reports/: benchmark_report.md  security_audit.md
docs/templates/: API_template.md  ARCHITECTURE_template.md  CHANGELOG_template.md  CODE_OF_CONDUCT_template.md  CONTRIBUTING_template.md  DEPENDENCY_template.md  ONBOARDING_template.md  README_template.md  RUNBOOK_template.md  SECURITY_template.md  TESTING_template.md
examples/: README.md  example3.py
examples/DOCUMENTATION/: CONTRIBUTING.md  DEPENDENCY.md  ONBOARDING.md  README.md  RUNBOOK.md  TESTING.md  documentation_metadata_20250726_193138.json  documentation_summary_20250726_193138.md  issue_detection_20250726_193137.json  issue_detection_20250726_193137.md
examples/sample_codebases/: example1.py
mcp_server/: agent_tests.py  agent_utils.py  comprehensive_tests.py  critical_agent.py  debt_agent.py  documentation_agent.py  dspy_workflows.py  endpoint_docs.md  improvement_agent.py  langchain_workflows.py  main.py  models.py  orchestration.py  orchestration_tests.py  schema_tests.py  server.py  validation_docs.md  validation_tests.py  workflow_tests.py
multiagent_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
requirements/: base.txt  dev.txt  langchain.txt
scripts/: test_server.py  verify_mcp_setup.py
src/multiagent_mcp_server/: __init__.py  __main__.py  agent_utils.py  base_agent.py  cache_utils.py  config.py  critical_agent.py  debt_agent.py  documentation_agent.py  dspy_workflows.py  error_utils.py  improvement_agent.py  issue_detection_agent.py  langchain_workflows.py  llm_plugin.py  models.py  orchestrator.py  plugin_interface.py  prompt_signatures.py  prompt_templates.py  scan_config.py  schemas.py  server.py  validation.py
src/multiagent_mcp_server/plugins/: bandit_plugin.py  mypy_plugin.py  ruff_plugin.py  semgrep_plugin.py
tests/: README.md  conftest.py  endpoint_tests.py  test_orchestrator.py
