[metadata]
name = multiagent-mcp-server
version = 0.1.0
description = Production-ready MCP server exposing multi-agent code review tools.
author = Your Name

[options]
packages = find:
python_requires = >=3.10
install_requires =
    mcp[cli]>=1.12.2
    httpx>=0.27.0
    dspy
    pydantic>=2.0.0

[options.entry_points]
console_scripts =
    multiagent-mcp-server = mcp_server.server:main

[options.packages.find]
include = mcp_server*